box product fix width shop on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -227,6 +227,10 @@ input:focus{
     border-bottom: 2px solid yellow;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+.col-d-1{
+    width: 100.813px;
+    display: inline-block;
+}
 .col-d-16{
     width: 5%!important;
 }
@@ -439,9 +443,6 @@ input:focus{
     height: 100%;
     margin: auto;
 }
-.bg-dark *{
-    color: #fff!important;
-}
 .fBuilding{
     position: fixed;
     bottom: 0;
@@ -509,9 +510,27 @@ input:focus{
     height: 100px;
     position: relative;
     display: block;
+    margin: 10px 0;
 }
 .product .productName{
-    padding-top: 5px;
-    font-size: 14px;
+    padding-top: 10px;
+    font-size: 12pt;
     text-align: center;
+    height: 60px;
+}
+.product .productDetail{
+    background-color: #fff;
+    font-size: 18px;
+    text-transform: uppercase;
+    text-align: center;
+    height: 40px;
+    line-height: 40px;
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.product .productDetail p{
+    color: #ff7979;
+}
+.bg-dark{
+    color: #fff!important;
 }
